# esp32c3-test

./: CHANGELOG.md  Cargo.toml  Embed.toml  README.md  asm.s  atomics_debug.riscv  atomics_release.riscv  blinky_rtt.riscv  blinky_rtt2.riscv  blinky_rtt_debug.riscv  blinky_rtt_release.riscv  build.rs  disasm.s  expansion.rs  jank.s  llvm.s  memory.riscv  memory.x  monotonic.rs  moserial_acm1.cfg  moserial_usb_serial_jtag.cfg  pmp.riscv  preemption_extended.rs  prio_thresh.riscv  riscv32imc-unknown-none-elf.json  rsrc.rust  rust-toolchain.toml  sigrok.pvs  sigrok.sr  something.riscv  spawn_extended.rs  spawn_simple_expanded.rs  sw_and_hw.rs  sw_and_hw.s  sw_and_hw_expanded.rs  tests.riscv  x_spawn.rs
.cargo/: config.toml
esp-link/: Cargo.toml
examples/: asm.rs  atomics.rs  blinky.rs  blinky_interrupts.rs  blinky_rtt.rs  blinky_uart.rs  blinky_usart.rs  button.rs  clock_example.rs  critical_section.rs  defmt.rs  gpio_interrupt.rs  hello.rs  interrupt_nesting.rs  jank.rs  lab4_example.rs  lab4_hack.rs  main.rs  monotonic.rs  monotonic2.rs  monotonic_e.rs  panic.rs  pmp.rs  pmp_resource.rs  preemption.rs  prio_thresh.rs  serial_interrupt.rs  serial_jtag_rtic.rs  simple_bench.rs  software_interrupt.rs  software_interrupts.rs  spawn.rs  spawn_preemption.rs  spawn_resources.rs  spawn_simple.rs  srp_gist.rs  sw_and_hw.rs  uart.rs  uart_echo.rs  uart_echo_interrupt.rs  (+4 more)
src/: lib.rs  main.rs
