[package]
name = "esp32c3-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
critical-section   = "1.1.1"
cfg-if = "1.0.0"
esp32c3-hal = { version = "0.14.0", features = ["interrupt-preemption", "direct-vectoring"] }
panic-rtt-target = { version = "0.1.2" }
rtt-target = { version = "0.4.0" }
rtic = {git = 'https://github.com/onsdagens/rtic', features = ["riscv-esp32c3-backend"], branch = "esp32c3-example"}
esp32c3 = {version="0.20.0",features=["critical-section"]}

[profile.release]
incremental = false
codegen-units = 1   # better optimizations
debug = true        # symbols are nice and they don't increase the size on Flash
opt-level = 3

[patch.crates-io]
panic-rtt-target = { git = 'https://github.com/perlindgren/rtt-target', branch = 'cell' }
rtt-target = { git = 'https://github.com/perlindgren/rtt-target', branch = 'cell' }
