[package]
name = "esp32c3-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

esp32c3-hal = { version = "0.14.0", features = [
    "interrupt-preemption",
    "direct-vectoring",
] }

cfg-if = "1.0.0"
esp32c3 = { version = "0.20.0", features = ["critical-section"] }
critical-section = "1.1.2"
panic-rtt-target = { version = "0.1.2" }
rtt-target = { version = "0.4.0" }
# defmt-rtt = "0.4.0"
# defmt = "0.3.5"

[profile.release]
incremental = false
codegen-units = 1   # better optimizations
debug = true        # symbols are nice and they don't increase the size on Flash
lto = true          # better optimizations
opt-level = "s"

[patch.crates-io]
panic-rtt-target = { git = 'https://github.com/perlindgren/rtt-target', branch = 'cell' }
rtt-target = { git = 'https://github.com/perlindgren/rtt-target', branch = 'cell' }

# esp-hal-common = { git = 'https://github.com/onsdagens/esp-hal/' }
# esp32c3-hal = { git = 'https://github.com/esp-rs/esp-hal/' }

# esp-hal-common = { git = 'https://github.com/onsdagens/esp-hal/' }
# esp32c3-hal = { git = 'https://github.com/onsdagens/esp-hal/' }
